--- a/frontendTest/gamecard-testing/index.html
+++ b/frontendTest/gamecard-testing/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="manifest" href="icons/site.webmanifest">
 
-    <title>REST API Test</title>
+    <title>API GameCard Test</title>
 
     <style>
         body {
@@ -36,7 +36,9 @@
             justify-content: space-between;
         }
 
-        #authPage, #endpointsPage, #resultPage {
+        #authPage,
+        #endpointsPage,
+        #resultPage {
             margin-right: 50px;
             margin-left: 50px;
         }
@@ -56,7 +58,8 @@
             overflow-wrap: break-word;
         }
 
-        #request-json, #response-json{
+        #request-json,
+        #response-json {
             max-width: 300px;
             max-height: 500px;
             overflow-wrap: break-word;
@@ -68,7 +71,7 @@
 <body>
     <div id="container">
         <div id="authPage">
-            <h1>Authentication</h1>
+            <h1>API GameCard Test</h1>
             <div>
                 <h2>Login</h2>
                 <input type="text" id="username" placeholder="Username"><br>
