Resolve "Add-to and remove-from favorites button"

--- a/frontendTest/favorites-testing/index.html
+++ b/frontendTest/favorites-testing/index.html
@@ -111,14 +111,14 @@
                     <button onclick="getFavorites()">Get Favorites</button><br>
                 </div>
                 <div>
-                    <h2>Add to favorites</h2>
-                    <input type="number" id="add-gamecard-id" placeholder="Search by ID" min="1"><br>
-                    <button onclick="addToFavorites()">Add Card</button><br>
+                    <h2>Toggle favorite</h2>
+                    <input type="number" id="toggle-gamecard-id" placeholder="Search by ID" min="1"><br>
+                    <button onclick="toggleFavorite()">Toggle</button><br>
                 </div>
                 <div>
-                    <h2>Remove from favorites</h2>
-                    <input type="number" id="remove-gamecard-id" placeholder="Search by ID" min="1"><br>
-                    <button onclick="removeFromFavorites()">Remove Card</button><br>
+                    <h2>Check favorite</h2>
+                    <input type="number" id="check-gamecard-id" placeholder="Search by ID" min="1"><br>
+                    <button onclick="checkFavorite()">Check</button><br>
                 </div>
             </div>
         </div>
