Resolve "Update queue endpoints"

--- a/frontendTest/queue-testing/index.html
+++ b/frontendTest/queue-testing/index.html
@@ -111,14 +111,14 @@
                     <button onclick="getQueue()">Get Queue</button><br>
                 </div>
                 <div>
-                    <h2>Add to queue</h2>
-                    <input type="number" id="add-gamecard-id" placeholder="Search by ID" min="1"><br>
-                    <button onclick="addToQueue()">Add Card</button><br>
+                    <h2>Toggle in-queue</h2>
+                    <input type="number" id="toggle-gamecard-id" placeholder="Search by ID" min="1"><br>
+                    <button onclick="toggleInQueue()">Toggle</button><br>
                 </div>
                 <div>
-                    <h2>Remove from queue</h2>
-                    <input type="number" id="remove-gamecard-id" placeholder="Search by ID" min="1"><br>
-                    <button onclick="removeFromQueue()">Remove Card</button><br>
+                    <h2>Check in-queue</h2>
+                    <input type="number" id="check-gamecard-id" placeholder="Search by ID" min="1"><br>
+                    <button onclick="checkInQueue()">Check</button><br>
                 </div>
             </div>
         </div>
